# temple-story-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/img/: GameTileset.tsx  TransparentTileset.tsx
assets/levels/level_1/room_1/: static_objects.json  static_objects.txt  tilemap.tmx
assets/locations/: 1_part_map.tmx
include/: Game.hpp
include/constants/: TextureKeys.hpp  game_settings.hpp  main_constants.h  path.h
include/entities/: Character.hpp  Entity.hpp  Item.hpp  Player.hpp  StaticObject.hpp
include/entities/static_objects/: Letter.hpp
include/env/: Room.hpp
include/state/: GameProcessState.hpp  GameState.hpp  MenuState.hpp  PlayerUIState.hpp  StateManager.hpp
include/tools/: Camera.hpp  ResourceManager_T.hpp  StaticObjectFactory.hpp  TileMap.hpp
include/ui/: Button.hpp  MessageBox.hpp  UIElement.hpp
include/utils/: logging.h  utils_functions.h
src/: Game.cpp  main.cpp
src/entities/: Character.cpp  Entity.cpp  Player.cpp  StaticObject.cpp
src/entities/static_objects/: Letter.cpp
src/env/: Room.cpp
src/state/: GameProcessState.cpp  MenuState.cpp  PlayerUIState.cpp  StateManager.cpp
src/tools/: Camera.cpp  StaticObjectFactory.cpp  TileMap.cpp
src/ui/: Button.cpp  MessageBox.cpp  UIElement.cpp
src/utils/: logging.cpp  utils_functions.cpp
